k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tasky
  namespace: tasky
spec:
  replicas: 2
  selector:
    matchLabels:
      app: tasky
  template:
    metadata:
      labels:
        app: tasky
    spec:
      containers:
      - name: tasky
        image: <ACCOUNT_ID>.dkr.ecr.<REGION>.amazonaws.com/tasky:latest
        ports:
        - containerPort: 8080
