k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tasky
  namespace: tasky
spec:
  type: ClusterIP
  selector:
    app: tasky
  ports:
  - port: 80
    targetPort: 8080
